--- a/index.html
+++ b/index.html
@@ -217,15 +217,19 @@
 </section>
 
 
-  <main class="container">
-    <h1>Utvalgte produkter</h1>
-    <div id="products" class="grid"></div>
-  </main>
+ <main>
+  <div class="container">
+    <h2>Utvalgte produkter</h2>
+    <div id="products-container" class="grid"></div>
+  </div>
+</main>
+
 
   <footer class="site-footer">© BrandRadar</footer>
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
