--- a/product.html
+++ b/product.html
@@ -6,6 +6,22 @@
   <title>Produktdetaljer | BrandRadar</title>
   <link rel="stylesheet" href="style.css" />
   <style>
+    body {
+      background: #fafafa;
+      font-family: "Inter", Arial, sans-serif;
+      color: #111;
+      margin: 0;
+    }
+
+    header.main-header {
+      background: #101011;
+      color: #fff;
+      padding: 14px 28px;
+      font-weight: 800;
+      font-size: 20px;
+      letter-spacing: 0.5px;
+    }
+
     main {
       max-width: 1200px;
       margin: 60px auto;
@@ -15,80 +31,130 @@
       gap: 40px;
       align-items: flex-start;
     }
+
+    /* --- IMAGE AREA --- */
     .product-gallery {
-      flex: 1 1 45%;
+      flex: 1 1 55%;
       background: #fff;
       border: 1px solid #eaeaea;
-      border-radius: 12px;
+      border-radius: 14px;
       padding: 20px;
       text-align: center;
       box-shadow: 0 4px 12px rgba(0,0,0,0.05);
+      position: relative;
     }
+
     .product-gallery img {
-      max-width: 100%;
-      border-radius: 12px;
+      width: 100%;
+      height: 500px;
+      object-fit: contain;
+      border-radius: 10px;
+      background: #f6f6f6;
     }
-    .product-details {
-      flex: 1 1 45%;
-      background: #fff;
-      border: 1px solid #eaeaea;
-      border-radius: 12px;
-      padding: 30px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.05);
-    }
-    .product-details h1 {
-      margin-top: 0;
-      font-size: 28px;
-      font-weight: 700;
-    }
-    .product-details p {
-      margin: 6px 0;
-    }
+
     .badge {
-      display: inline-block;
+      position: absolute;
+      top: 20px;
+      left: 20px;
       background: #000;
       color: #fff;
-      padding: 6px 12px;
-      border-radius: 10px;
-      margin-bottom: 10px;
+      padding: 6px 14px;
+      border-radius: 12px;
+      font-size: 14px;
+      font-weight: 600;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.2);
     }
     .badge.new { background: #00b894; }
+
+    /* --- PRODUCT DETAILS --- */
+    .product-details {
+      flex: 1 1 40%;
+      background: #fff;
+      border: 1px solid #eaeaea;
+      border-radius: 14px;
+      padding: 36px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.05);
+    }
+
+    .product-details h1 {
+      font-size: 32px;
+      font-weight: 800;
+      margin: 0 0 10px;
+      line-height: 1.2;
+    }
+
+    .product-meta {
+      color: #666;
+      font-size: 14px;
+      margin-bottom: 18px;
+      line-height: 1.5;
+    }
+
+    .product-price {
+      font-size: 24px;
+      font-weight: 700;
+      margin-bottom: 20px;
+    }
+
     .buy-button {
       display: inline-block;
-      margin-top: 20px;
+      margin-top: 10px;
       background: #000;
       color: #fff;
-      padding: 14px 28px;
+      padding: 14px 32px;
       border-radius: 8px;
       font-weight: 600;
       text-decoration: none;
       transition: background 0.3s;
     }
     .buy-button:hover { background: #333; }
+
     .back-link {
       display: inline-block;
-      margin-top: 40px;
+      margin-top: 30px;
       color: #000;
       text-decoration: underline;
+      font-size: 14px;
+    }
+
+    /* --- MOBILE --- */
+    @media (max-width: 768px) {
+      main {
+        flex-direction: column;
+        padding: 20px 16px;
+      }
+      .product-gallery img {
+        height: 320px;
+      }
+      .product-details {
+        padding: 24px;
+      }
+      .product-details h1 {
+        font-size: 26px;
+      }
+      .product-price {
+        font-size: 22px;
+      }
     }
   </style>
 </head>
 <body>
 
   <header class="main-header">
-    <div class="logo">BrandRadar</div>
+    BrandRadar
   </header>
 
   <main>
     <div class="product-gallery">
-      <img id="product-image" src="" alt="">
-    </div>
-    <div class="product-details">
       <span id="product-badge" class="badge"></span>
-      <h1 id="product-title"></h1>
-      <p id="product-brand"></p>
-      <p id="product-category"></p>
-      <p id="product-price"></p>
+      <img id="product-image" src="" alt="Produktbilde">
+    </div>
+
+    <div class="product-details">
+      <h1 id="product-title">Produktnavn</h1>
+      <div id="product-brand" class="product-meta"></div>
+      <div id="product-category" class="product-meta"></div>
+      <div id="product-price" class="product-price"></div>
       <a id="buy-button" class="buy-button" href="#" target="_blank">Kjøp nå</a>
       <a href="index.html" class="back-link">← Tilbake</a>
     </div>
@@ -96,27 +162,35 @@
 
   <script>
     const data = localStorage.getItem("selectedProduct");
+
     if (data) {
       const p = JSON.parse(data);
+
+      // Sett data på riktig plass
       document.getElementById("product-image").src = p.image;
       document.getElementById("product-title").textContent = p.title;
       document.getElementById("product-brand").textContent = "Brand: " + p.brand;
-      document.getElementById("product-category").textContent = p.category + " • " + p.gender + " • " + p.subcategory;
+      document.getElementById("product-category").textContent = `${p.gender} • ${p.subcategory}`;
       document.getElementById("product-price").textContent = "Pris: " + p.price;
       document.getElementById("buy-button").href = p.link;
 
+      // Badge
       const badge = document.getElementById("product-badge");
       if (p.discount) {
-        const isNew = /nyhet|new/i.test(p.discount);
-        badge.textContent = isNew ? "Nyhet!" : "Discount: " + p.discount;
+        const cleanText = p.discount.replace(/["%]/g, "").trim();
+        const isNew = /nyhet|new/i.test(cleanText);
+        badge.textContent = isNew ? "Nyhet!" : "Discount: " + cleanText + "%";
         if (isNew) badge.classList.add("new");
       } else {
         badge.style.display = "none";
       }
+
     } else {
-      document.querySelector("main").innerHTML = "<p>Fant ikke produktdata. Gå tilbake til forsiden.</p>";
+      document.querySelector("main").innerHTML =
+        "<p>Fant ikke produktdata. Gå tilbake til forsiden.</p>";
     }
   </script>
 
 </body>
 </html>
+
