--- a/product.html
+++ b/product.html
@@ -44,12 +44,16 @@
       position: relative;
     }
 
-    .product-gallery img {
+    .product-gallery img#product-image {
       width: 100%;
       height: 500px;
       object-fit: contain;
       border-radius: 10px;
       background: #f6f6f6;
+      transition: transform 0.3s ease;
+    }
+    .product-gallery img#product-image:hover {
+      transform: scale(1.03);
     }
 
     .badge {
@@ -65,6 +69,46 @@
       box-shadow: 0 2px 6px rgba(0,0,0,0.2);
     }
     .badge.new { background: #00b894; }
+
+    .thumbnail-container {
+      display: flex;
+      justify-content: center;
+      gap: 10px;
+      margin-top: 20px;
+      flex-wrap: wrap;
+    }
+
+    .thumbnail-container img {
+      width: 80px;
+      height: 80px;
+      object-fit: cover;
+      border-radius: 8px;
+      border: 2px solid transparent;
+      cursor: pointer;
+      transition: transform 0.2s ease, border-color 0.2s ease;
+    }
+
+    .thumbnail-container img:hover {
+      transform: scale(1.05);
+      border-color: #000;
+    }
+
+    /* --- FAVORITE BUTTON --- */
+    .favorite-btn {
+      position: absolute;
+      top: 20px;
+      right: 20px;
+      font-size: 24px;
+      background: none;
+      border: none;
+      cursor: pointer;
+      color: #ccc;
+      transition: color 0.2s ease;
+    }
+
+    .favorite-btn.active {
+      color: #e63946;
+    }
 
     /* --- PRODUCT DETAILS --- */
     .product-details {
@@ -123,7 +167,7 @@
         flex-direction: column;
         padding: 20px 16px;
       }
-      .product-gallery img {
+      .product-gallery img#product-image {
         height: 320px;
       }
       .product-details {
@@ -134,6 +178,10 @@
       }
       .product-price {
         font-size: 22px;
+      }
+      .thumbnail-container img {
+        width: 60px;
+        height: 60px;
       }
     }
   </style>
@@ -147,7 +195,9 @@
   <main>
     <div class="product-gallery">
       <span id="product-badge" class="badge"></span>
+      <button id="favorite-btn" class="favorite-btn" title="Legg til i favoritter">♡</button>
       <img id="product-image" src="" alt="Produktbilde">
+      <div class="thumbnail-container" id="thumbnail-container"></div>
     </div>
 
     <div class="product-details">
@@ -165,8 +215,6 @@
 
     if (data) {
       const p = JSON.parse(data);
-
-      // Sett data på riktig plass
       document.getElementById("product-image").src = p.image;
       document.getElementById("product-title").textContent = p.title;
       document.getElementById("product-brand").textContent = "Brand: " + p.brand;
@@ -185,6 +233,38 @@
         badge.style.display = "none";
       }
 
+      // FAVORITTKNAPP
+      const favBtn = document.getElementById("favorite-btn");
+      const favorites = JSON.parse(localStorage.getItem("favorites") || "[]");
+      const isFavorite = favorites.some(f => f.title === p.title);
+      if (isFavorite) favBtn.classList.add("active");
+
+      favBtn.addEventListener("click", () => {
+        let updated = JSON.parse(localStorage.getItem("favorites") || "[]");
+        if (favBtn.classList.contains("active")) {
+          updated = updated.filter(f => f.title !== p.title);
+          favBtn.classList.remove("active");
+        } else {
+          updated.push(p);
+          favBtn.classList.add("active");
+        }
+        localStorage.setItem("favorites", JSON.stringify(updated));
+      });
+
+      // THUMBNAILS
+      const thumbs = document.getElementById("thumbnail-container");
+      const extraImages = [p.image2, p.image3, p.image4].filter(Boolean);
+      if (extraImages.length > 0) {
+        extraImages.forEach(img => {
+          const thumb = document.createElement("img");
+          thumb.src = img;
+          thumb.alt = "Produktbilde";
+          thumb.addEventListener("click", () => {
+            document.getElementById("product-image").src = img;
+          });
+          thumbs.appendChild(thumb);
+        });
+      }
     } else {
       document.querySelector("main").innerHTML =
         "<p>Fant ikke produktdata. Gå tilbake til forsiden.</p>";
