--- a/product.html
+++ b/product.html
@@ -196,6 +196,36 @@
         height: 60px;
       }
     }
+    .favorite-btn {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  font-size: 32px;
+  background: none;
+  border: none;
+  cursor: pointer;
+  color: #bbb;
+  transition: color 0.2s ease, transform 0.2s ease;
+}
+
+.favorite-btn:hover {
+  transform: scale(1.1);
+  color: #e63946;
+}
+
+/* FYLT HJERTE NÅR AKTIV */
+.favorite-btn.active::before {
+  content: "❤️"; /* fylt emoji-hjerte */
+}
+
+.favorite-btn::before {
+  content: "♡"; /* tomt hjerte */
+}
+
+.favorite-btn.active {
+  color: #e63946;
+}
+
   </style>
 </head>
 <body>
