--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
       <a href="index.html" aria-current="page">Home</a>
       <a href="news.html">News</a>
       <a href="brands.html">Brands</a>
+      <a href="favoritter.html">Favoritter (<span data-fav-count>0</span>)</a>
+
     </nav>
 
     <form class="search-container" role="search">
@@ -229,6 +231,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
