--- a/news.html
+++ b/news.html
@@ -14,6 +14,8 @@
       <a href="index.html">Home</a>
       <a href="news.html" aria-current="page">News</a>
       <a href="brands.html">Brands</a>
+      <a href="favoritter.html">Favoritter (<span data-fav-count>0</span>)</a>
+
     </nav>
     <form class="search-container" role="search">
       <input type="search" id="searchInput" placeholder="Søk produkter…" aria-label="Søk">
