--- a/product.html
+++ b/product.html
@@ -231,8 +231,15 @@
 <body>
 
   <header class="main-header">
-    BrandRadar
-  </header>
+  <a class="logo" href="index.html">BrandRadar</a>
+  <nav class="top-nav">
+    <a href="index.html">Home</a>
+    <a href="news.html">News</a>
+    <a href="brands.html">Brands</a>
+    <a href="favoritter.html">Favoritter (<span data-fav-count>0</span>)</a>
+  </nav>
+</header>
+
 
   <main>
     <div class="product-gallery">
