--- a/product.html
+++ b/product.html
@@ -226,6 +226,40 @@
   color: #e63946;
 }
 
+/* --- SVG FAVORITE BUTTON (animasjon + fyll) --- */
+.favorite-btn {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  background: none;
+  border: none;
+  cursor: pointer;
+  width: 38px;
+  height: 38px;
+  padding: 0;
+  transition: transform 0.25s ease;
+}
+.favorite-btn svg {
+  width: 100%;
+  height: 100%;
+  fill: none;
+  stroke: #aaa;
+  stroke-width: 2;
+  transition: fill 0.25s ease, stroke 0.25s ease;
+}
+.favorite-btn:hover svg {
+  stroke: #e63946;
+}
+.favorite-btn.active svg {
+  fill: #e63946;
+  stroke: #e63946;
+  transform: scale(1.05);
+}
+.favorite-btn:active {
+  transform: scale(1.15);
+}
+
+    
   </style>
 </head>
 <body>
