--- a/product.html
+++ b/product.html
@@ -278,7 +278,12 @@
   <main>
     <div class="product-gallery">
       <span id="product-badge" class="badge"></span>
-      <button id="favorite-btn" class="favorite-btn" title="Legg til i favoritter">♡</button>
+      <button id="favorite-btn" class="favorite-btn" title="Legg til i favoritter" aria-label="Favoritt">
+  <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+    <path d="M12 21s-7-4.35-10-8.87C-1.33 8.24 1.42 3 6.6 3 9.07 3 12 5.09 12 5.09S14.93 3 17.4 3c5.18 0 7.93 5.24 4.6 9.13C19 16.65 12 21 12 21z"/>
+  </svg>
+</button>
+
       <img id="product-image" src="" alt="Produktbilde">
       <div class="thumbnail-container" id="thumbnail-container"></div>
     </div>
