--- a/product.html
+++ b/product.html
@@ -459,6 +459,7 @@ favBtn.addEventListener("click", () => {
     });
   }
 </script>
+<div id="fav-popup" class="fav-popup"></div>
 
 </body>
 </html>
