--- a/favoritter.html
+++ b/favoritter.html
@@ -178,7 +178,21 @@
 <div id="fav-popup" class="fav-popup"></div>
 
 <script>
-  // --- Popup-funksjon ---
+  // --- UTIL ---
+  function readFavs() {
+    try { return JSON.parse(localStorage.getItem('favorites') || '[]'); }
+    catch { return []; }
+  }
+  function writeFavs(arr) {
+    localStorage.setItem('favorites', JSON.stringify(arr));
+    updateFavCount();
+  }
+  function updateFavCount() {
+    const count = readFavs().length;
+    document.querySelectorAll('[data-fav-count]').forEach(el => el.textContent = count);
+  }
+
+  // --- POPUP ---
   function showFavPopup(message) {
     const popup = document.getElementById("fav-popup");
     popup.textContent = message;
@@ -186,20 +200,76 @@
     setTimeout(() => popup.classList.remove("show"), 1500);
   }
 
-  // Når brukeren klikker "Fjern"
-  document.addEventListener("click", e => {
-    const btn = e.target.closest("[data-action='remove']");
-    if (btn) showFavPopup("Fjernet fra favoritter ❌");
+  // --- RENDER ---
+  function renderFavs() {
+    const grid = document.getElementById('favGrid');
+    const empty = document.getElementById('empty');
+    const favs = readFavs();
+
+    grid.innerHTML = '';
+    if (!favs.length) {
+      empty.hidden = false;
+      return;
+    }
+    empty.hidden = true;
+
+    favs.forEach((p, idx) => {
+      const card = document.createElement('div');
+      card.className = 'product-card';
+      card.innerHTML = `
+        <div class="product-image">
+          ${p.discount ? `<span class="badge">${p.discount}</span>` : ''}
+          <img src="${p.image || ''}" alt="${p.title || ''}" />
+        </div>
+        <div class="product-info">
+          <h3 class="product-name">${(p.brand || '') + ' ' + (p.title || '')}</h3>
+          ${p.price ? `<p class="product-price">${p.price}</p>` : ''}
+          <p class="product-category">${(p.category || '')}${p.gender ? ' • ' + p.gender : ''}${p.subcategory ? ' • ' + p.subcategory : ''}</p>
+          <div style="display:flex;gap:8px;margin-top:10px;justify-content:center;">
+            <button class="btn primary" data-action="open">Vis</button>
+            <button class="btn" data-action="remove">Fjern</button>
+          </div>
+        </div>
+      `;
+
+      // Åpne produkt
+      card.querySelector('[data-action="open"]').addEventListener('click', () => {
+        localStorage.setItem('selectedProduct', JSON.stringify(p));
+        window.location.href = 'product.html';
+      });
+
+      // Fjern produkt
+      card.querySelector('[data-action="remove"]').addEventListener('click', () => {
+        const arr = readFavs().filter((_, i) => i !== idx);
+        writeFavs(arr);
+        renderFavs();
+        showFavPopup("Fjernet fra favoritter ❌");
+      });
+
+      grid.appendChild(card);
+    });
+
+    updateFavCount();
+  }
+
+  // --- CLEAR ALL ---
+  document.getElementById('clearAll').addEventListener('click', () => {
+    if (confirm('Vil du tømme alle favoritter?')) {
+      writeFavs([]);
+      renderFavs();
+      showFavPopup("Alle favoritter slettet 🗑️");
+    }
   });
 
-  // Når brukeren tømmer alt
-  const clearAllBtn = document.getElementById("clearAll");
-  if (clearAllBtn) {
-    clearAllBtn.addEventListener("click", () => {
-      showFavPopup("Alle favoritter slettet 🗑️");
-    });
-  }
+  // --- INIT ---
+  document.addEventListener('DOMContentLoaded', () => {
+    renderFavs();
+    updateFavCount();
+  });
 </script>
+
+<!-- Popup-element -->
+<div id="fav-popup" class="fav-popup"></div>
 
   
 </body>
