--- a/brands.html
+++ b/brands.html
@@ -221,7 +221,7 @@
     document.addEventListener("DOMContentLoaded", loadBrands);
   </script>
 
-  <script src="script.js"></script>
+  <script src="brands.js"></script>
 </body>
 </html>
 
