--- a/brands.html
+++ b/brands.html
@@ -134,6 +134,22 @@
 
   <!-- KUN denne scriptfila — alt annet forblir urørt -->
   <script src="brands.js"></script>
+
+<script>
+  // Oppdater favoritt-teller på alle sider
+  function readFavs() {
+    try { return JSON.parse(localStorage.getItem("favorites") || "[]"); }
+    catch { return []; }
+  }
+  function updateFavCount() {
+    const count = readFavs().length;
+    document.querySelectorAll("[data-fav-count]").forEach(el => el.textContent = count);
+  }
+  document.addEventListener("DOMContentLoaded", updateFavCount);
+  window.addEventListener("storage", e => { if (e.key === "favorites") updateFavCount(); });
+</script>
+
+  
 </body>
 </html>
 
