--- a/brands.html
+++ b/brands.html
@@ -126,7 +126,7 @@
 
     <section>
       <h2>Alle Brands</h2>
-      <div class="brand-grid" id="brands"></div>
+      <div id="brands"></div>
     </section>
   </main>
 
